# AI_solo_coder_task_B_041

./: README.md  start_services.bat
backend/: CMakeLists.txt
backend/common/include/: ipc_queue.h  metrics.h  service_base.h
backend/include/: acoustic_diagnosis.h  alarm_manager.h  api_server.h  cavitation_detector.h  clickhouse_client.h  config.h  data_pipeline.h  data_structures.h  life_assessor.h  robot_repair_planner.h  signal_processor.h  turbine_mpc_controller.h  udp_server.h  unit_scheduler.h
backend/modules/acoustic_fingerprint/include/: acoustic_fingerprint.h
backend/modules/acoustic_fingerprint/src/: acoustic_fingerprint.cpp
backend/modules/cavitation_controller/include/: cavitation_controller.h
backend/modules/cavitation_controller/src/: cavitation_controller.cpp
backend/modules/plant_scheduler/include/: plant_scheduler.h
backend/modules/plant_scheduler/src/: plant_scheduler.cpp
backend/modules/robot_planner/include/: robot_planner.h
backend/modules/robot_planner/src/: robot_planner.cpp
backend/services/acoustic_diagnosis/: main.cpp
backend/services/alarm_pusher/: main.cpp
backend/services/api_gateway/: main.cpp
backend/services/cavitation_detector/: main.cpp
backend/services/fatigue_evaluator/: main.cpp
backend/services/pxi_collector/: main.cpp
backend/services/robot_planner/: main.cpp
backend/services/turbine_controller/: main.cpp
backend/services/unit_scheduler/: main.cpp
backend/src/: acoustic_diagnosis.cpp  alarm_manager.cpp  api_server.cpp  cavitation_detector.cpp  clickhouse_client.cpp  config.cpp  data_pipeline.cpp  life_assessor.cpp  main.cpp  robot_repair_planner.cpp  signal_processor.cpp  turbine_mpc_controller.cpp  udp_server.cpp  unit_scheduler.cpp
clickhouse/: archive_policy.sql  init.sql
config/: config.json
config/models/: acoustic_patterns.json  autoencoder.json  isolation_forest.json  material_13Cr4Ni.json
docker/: Dockerfile.cpp  Dockerfile.frontend  Dockerfile.iec61850  Dockerfile.pxi_sim  docker-compose.yml  nginx.conf  prometheus.yml
frontend/: index.html
frontend/components/: acoustic_fingerprint.js  cavitation_controller.js  manifest.json  plant_scheduler.js  robot_planner.js
frontend/css/: style.css
frontend/js/: acoustic_diagnosis_tab.js  blade_detail.js  main.js  mpc_control_tab.js  robot_repair_tab.js  turbine_3d_viewer.js  turbine_viewer.js  unit_schedule_tab.js  waterfall_chart.js
simulator/: iec61850_simulator.py  pxi_simulator.py
tests/: regression_report.json  regression_runner.py
